--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".HomeActivity"
+            android:screenOrientation="landscape">
+
+        </activity>
+        <activity
             android:name=".GameActivity"
             android:screenOrientation="landscape">
 
